[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "mazegen"
version = "1.0.0"
description = "Reusable 2D maze generator with multiple algorithms."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
keywords = ["maze", "generator", "algorithm", "graph"]

[project.optional-dependencies]
dev = ["mypy", "flake8", "pytest", "build"]

[tool.setuptools.packages.find]
include = ["mazegen*"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
check_untyped_defs = true
